# GasSentinel

./: README.md  gas_leak_map.html  iot_data.db
Deliveries/: GasSentinel.pptx  GasSentinel2.pptx  ~$GasSentinel.pptx
gasSentinel/: CMakeLists.txt  sdkconfig  sdkconfig.old
gasSentinel/components/aux/: CMakeLists.txt  aux.c
gasSentinel/components/cJSON/: CMakeLists.txt
gasSentinel/components/helper/: CMakeLists.txt  helper.c  helper.h
gasSentinel/main/: CMakeLists.txt  Kconfig.projbuild  gasSentinel.c
gasSentinel/mq2Calibration/: calib.ino
gasSentinel/mq2Calibration/calib/: calib.ino
gasSentinel/powerConsumption/: getCurrent.ino
gasSentinel/server/: data.py  data1.py  gas_leak_map.html  iot_data.db  mqtt_to_database.py  plotter.py  requirements.txt
